spicyhunt-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spicyhunt-backend
  labels:
    app: spicyhunt-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spicyhunt-backend
  template:
    metadata:
      labels:
        app: spicyhunt-backend
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      containers:
        - name: spicyhunt-backend
          image: gitlab.websiteserverhost.net:5050/headless_demo/spicyhunt/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 1337
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "700m"
              memory: "1024Mi"
