spicyhunt-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spicyhunt-backend-service
spec:
  selector:
    app: spicyhunt-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337
  type: ClusterIP
