spicyhunt-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spicyhunt-frontend-service
spec:
  selector:
    app: spicyhunt-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4001
  type: ClusterIP
